# AwesomeViewer

./: CMakeLists.txt  Cell.cpp  Cell.h  Cell.hpp  Pixel.hpp  Style.hpp  VirtualTerminal.cpp  VirtualTerminal.h  VirtualTerminal.hpp  main.cpp  utils.hpp
scripts/: pretty_code.sh
src/: Cell.hpp  Pixel.hpp  Style.hpp  StyleString.hpp  VirtualTerminal.hpp  main.cpp  utils.hpp
